# loadsmart_ae_challenge

./: .gitignore  README.md  docker-compose-sftp-test.yml  docker-compose.yml  pyproject.toml  requirements.txt
loadsmart_dbt/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
loadsmart_dbt/models/marts/: _marts__models.yml
loadsmart_dbt/models/marts/core/: dim_carrier.sql  dim_date.sql  dim_shipper.sql  fact_loads.sql  rpt_delivered_last_month.sql
loadsmart_dbt/models/staging/: _loadsmart__sources.yml  stg_loads.sql
notebooks/: clean-raw_loads.ipynb  export.ipynb
reports/: power_bi_file.pbix
